<resources>
    <string name="app_name">Duet</string>
    <string name="subtitle">A private messenger for couples.</string>
    <string name="login_text">Log in</string>
    <string name="email_text_hint">Email</string>
    <string name="username_text_hint">Username</string>
    <string name="password_text_hint">Password</string>
    <string name="already_member">Already a member?</string>
    <string name="not_a_member">Not a member? </string>
    <string name="signup_link"> Sign up</string>
    <string name="welcome_message">Welcome friend</string>
    <string name="welcome_message_subtitle">One last step to connect with your loved one.</string>
    <string name="welcome_copy_message">Click the \"Copy ID\" button to copy an ID and share it with your partner.</string>
    <string name="or">OR</string>
    <string name="already_got_ID">Do you have an ID? </string>
    <string name="paste_it_here">Paste the ID here and click \"Connect\"</string>
    <string name="yes">Yeah</string>
    <string name="no">Nah</string>
    <string name="connect">Connect</string>
    <string name="back">Go Back</string>
    <string name="chatroom_created">Great! you\'ve created chatroom, now Copy the ID and share it with your partner</string>
    <string name="chatroom_lonely">Chatroom was created, however your partner has not joined yet. Wait for them to join.</string>
    <string name="no_id">I don\'t have an ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lonely">"Its all lonely here, let's set up you up.\nClick following button to Get Started."</string>
    <string name="about_id">"An ID is a link to the chatroom that you and your partner will share. "</string>
</resources>
