<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/statusBarDark"
    >
    <!--<include-->
    <!--android:id="@+id/toolbar"-->
    <!--layout="@layout/toolbar"/>-->
    <include
        android:id="@+id/toolbar_import"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_import"
        app:cardCornerRadius="12dp"
        android:layout_margin="4dp">
    <LinearLayout
        android:layout_margin="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:layout_marginTop="36dp"
        >

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Hello!"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/secondaryTextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Create an account here."
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_margin="8dp"
            android:padding="14dp"
            android:hint="@string/email_text_hint"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@color/primaryColor"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password_text_hint"
            android:background="@drawable/custom_edit_text"
            android:padding="14dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:maxLines="1"
            android:inputType="text"
            android:layout_margin="8dp"
            android:padding="14dp"
            android:hint="@string/username_text_hint"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@color/primaryColor"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/secondaryTextColor"
                />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text=" Log in"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/empty_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/signup_button"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_link"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/custom_button_background"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp"
            android:layout_margin="12dp"
            />

    </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>